• Added course routes - addStudentToCourse - removeStudentFromCourse - createAttendanceRecords - markAttendanceRecordPresent • Refactored and minor optimizations including creation of multiple PrismaClient instances.
